# game_1

./: CMakeLists.txt  CMakePresets.json  README.md  hello.cpp
config/: config.json
src/: CMakeLists.txt  SDL_test.cpp  animation.cpp  animation.h  bullet.cpp  bullet.h  comm_def.h  enemy.cpp  enemy.h  enemy_spawner.cpp  enemy_spawner.h  game.cpp  game.h  guid_gen.cpp  guid_gen.h  hello.cpp  item.cpp  item.h  item_spawner.cpp  item_spawner.h  item_types.h  main.cpp  object.cpp  object.h  object_type.h  player.cpp  player.h  resource_mgr.cpp  resource_mgr.h  scene.cpp  scene.h  scene_main.cpp  scene_main.h  shield.cpp  shield.h  singleton.h  texture_mgr.cpp  texture_mgr.h  timer.cpp  timer.h  (+1 more)
